--- a/.github/workflows/todoon.yml
+++ b/.github/workflows/todoon.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v4
 
   todoon:
-    uses: Start-Out/.github/.github/workflows/todoon.yml@main
+    uses: Start-Out/.github/workflows/todoon.yml@main
     with: 
       issues: true
       can_fail: true
